# test_ai

./: Makefile  alembic.ini  docker-compose.yml  pyproject.toml  req.txt
ai_assistant/: __main__.py
ai_assistant/api/: __init__.py  add_source.py  ask_question.py  get_quest.py  get_recommendation.py  get_recommendation_activity.py  get_recommendation_sleep.py
ai_assistant/config/: __init__.py  prompts.py  settings.py
ai_assistant/db/connection/: __init__.py  session.py
ai_assistant/db/orm_models/: __init__.py  base.py  history_id.py  history_uuid.py  vector.py
ai_assistant/rag/: parser.py
ai_assistant/schemas/: __init__.py  quest.py  question.py
ai_assistant/utils/: __init__.py  closest_chunks.py  history.py
alembic/: env.py
alembic/versions/: 506daf29636d_create_final_tables.py  f5a5a6779738_create_tables.py
