[project]
name = "ai-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Danis Kagarmanov",email = "wikirustit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "openai (>=1.99.9,<2.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "docx (>=0.2.4,<0.3.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "python-docx (>=1.2.0,<2.0.0)",
    "grpcio (>=1.74.0,<2.0.0)",
    "readability (>=0.3.2,<0.4.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "yandexcloud (>=0.355.0,<0.356.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
